Fix input() display on Github

--- a/RealtorBot.ipynb
+++ b/RealtorBot.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e11ae6ab-f8bb-4ffe-8bfa-7e94fdbf500e",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "d08db273-ba69-41c6-9f98-89b1cb943af6",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "b7dcb43a-84c1-4e6a-9e75-2a019afc90f6",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "c620cd6a-4d9f-4d47-a284-290f3e80ef59",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
        "4                 2  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b874027b-e16f-4312-83a7-bff112a63f57",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "id": "8d012fde-57a2-4580-a550-f87dbf7c60ce",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "id": "2a5bcd62-e06e-46dc-ba9d-31ab079eed30",
    "metadata": {},
    "outputs": [],
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 23,
    "id": "5e475797-765d-4ddc-b21e-547b795f1d58",
    "metadata": {},
    "outputs": [],
@@ -614,8 +614,9 @@
     "        self.convo: list = [{\"role\": \"system\", \"content\": system_content.format(len(self.housing_data))}]\n",
     "        self.debug = debug\n",
     "        self.colours = {\n",
-    "            \"function_call\": \"red\",\n",
     "            \"assistant\": \"blue\",\n",
+    "            \"user\": \"black\",\n",
+    "            \"function_call\": \"red\",\n",
     "            \"function_response\": \"green\"\n",
     "        }\n",
     "\n",
@@ -679,6 +680,8 @@
     "        elif data[\"role\"] == \"user\":\n",
     "            # user content\n",
     "            convo_message = data\n",
+    "            colour = self.colours[\"user\"]\n",
+    "            print_message = data[\"content\"]\n",
     "        else:\n",
     "            # function response\n",
     "            convo_message = data\n",
@@ -708,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 24,
    "id": "1f5c056e-7dd9-48bd-8fa7-ad4d36a62346",
    "metadata": {},
    "outputs": [
@@ -716,51 +719,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34mHello! How can I assist you today?\u001b[0m\n"
+      "\u001b[34mHi there! Welcome to our real estate agency. How can I assist you today?\n",
+      "We have a list of 545 properties available. To help you narrow down the selection, could you please let me know your specific requirements?\u001b[0m\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      ">  I'm looking for a house. The budget is 5000000; we are a two car family; we need somewhere without stairs.\n"
+      ">  I'm looking for a house. The budget is 5000000\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[30mI'm looking for a house. The budget is 5000000\u001b[0m\n",
       "\u001b[31m{'name': 'filter_lte', 'arguments': '{\\n  \"filter_name\": \"price\",\\n  \"filter_value\": 5000000\\n}'}\u001b[0m\n",
       "\u001b[32m{'role': 'function', 'name': 'filter_lte', 'content': '350'}\u001b[0m\n",
-      "\u001b[31m{'name': 'filter_gte', 'arguments': '{\\n  \"filter_name\": \"parking\",\\n  \"filter_value\": 2\\n}'}\u001b[0m\n",
-      "\u001b[32m{'role': 'function', 'name': 'filter_gte', 'content': '54'}\u001b[0m\n",
-      "\u001b[31m{'name': 'filter_match', 'arguments': '{\\n  \"filter_name\": \"stories\",\\n  \"filter_value\": 1\\n}'}\u001b[0m\n",
-      "\u001b[32m{'role': 'function', 'name': 'filter_match', 'content': '29'}\u001b[0m\n",
-      "\u001b[34mBased on your requirements, I have narrowed down the list to 29 properties that are within your budget, have at least two parking spaces, and are single-story houses. \n",
-      "\n",
-      "Would you like me to provide more details about these properties?\u001b[0m\n"
+      "\u001b[34mGreat! Based on your budget of 5000000, we have 350 houses available. That's a good number to start with. \n",
+      "What other requirements do you have for the house?\u001b[0m\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      ">  must have aircon and hot showers\n"
+      ">  we are a two car family\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31m{'name': 'filter_match', 'arguments': '{\\n  \"filter_name\": \"airconditioning\",\\n  \"filter_value\": 1\\n}'}\u001b[0m\n",
-      "\u001b[32m{'role': 'function', 'name': 'filter_match', 'content': '8'}\u001b[0m\n",
-      "\u001b[31m{'name': 'filter_match', 'arguments': '{\\n  \"filter_name\": \"hotwaterheating\",\\n  \"filter_value\": 1\\n}'}\u001b[0m\n",
-      "\u001b[32m{'role': 'function', 'name': 'filter_match', 'content': '0'}\u001b[0m\n",
-      "\u001b[34mOut of the 29 properties that meet your budget, parking requirements, and are single-story houses, only 8 of them have air conditioning. However, none of them have a hot water heating system.\n",
-      "\n",
-      "Since the number of properties matching all your requirements is less than 10, I recommend calling our office to arrange viewings for these houses. Our team will be able to provide you with more specific details about each property and help you make a decision.\n",
-      "\n",
-      "Please let me know if there's anything else I can assist you with.\u001b[0m\n"
+      "\u001b[30mwe are a two car family\u001b[0m\n",
+      "\u001b[31m{'name': 'filter_gte', 'arguments': '{\\n  \"filter_name\": \"parking\",\\n  \"filter_value\": 2\\n}'}\u001b[0m\n",
+      "\u001b[32m{'role': 'function', 'name': 'filter_gte', 'content': '54'}\u001b[0m\n",
+      "\u001b[34mAlright, we have 54 houses that have at least 2 parking spaces. That should be suitable for your two-car family. \n",
+      "Is there anything else you are looking for in a house?\u001b[0m\n"
      ]
     },
     {
@@ -777,7 +773,7 @@
     "You are a helpful realtor with a list initially containing {} properties.\n",
     "Greet the customer and offer to help narrow this selection based on the customer's requirements.\n",
     "For each property, we have the following characteristics:\n",
-    "    price (asking price in USD),\n",
+    "    price (asking price in euro),\n",
     "    area (total floor area in metres squared),\n",
     "    bedrooms (number of bedrooms),\n",
     "    bathrooms (number of bathrooms),\n",
@@ -798,36 +794,6 @@
     "\n",
     "realtor = Realtor(REALTOR_SYSTEM_CONTENT, FUNCTION_SPECS, FUNCTION_DICT, debug=True)\n",
     "realtor.converse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "07078cbf-da5f-4a3d-864f-01c9784fa590",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'role': 'system', 'content': \"\\nYou are a helpful realtor with a list initially containing 545 properties.\\nGreet the customer and offer to help narrow this selection based on the customer's requirements.\\nFor each property, we have the following characteristics:\\n    price (asking price in USD),\\n    area (total floor area in metres squared),\\n    bedrooms (number of bedrooms),\\n    bathrooms (number of bathrooms),\\n    stories (number of stories),\\n    mainroad (1 if the property is on a main road, otherwise 0),\\n    guestroom (1 if the property has a guestroom, otherwise 0),\\n    basement (1 if the property has a basement, otherwise 0),\\n    hotwaterheating (1 if the property has a water heating system, otherwise 0),\\n    airconditioning (1 if the property has air conditioning, otherwise 0),\\n    parking (number of parking spaces),\\n    prefarea (1 if the property is in a trendy neighbourhood, otherwise 0),\\n    furnishingstatus (0 if unfurnished, 1 if semi-furnished, 2 if fully furnished)\\nHelp the user to narrow the list.\\nWhen there are fewer than 10, advise the user to call the office to arrange viewings.\\n\"}\n",
-      "{'role': 'assistant', 'content': \"Hello! How can I assist you today? If you're looking to buy a property, I can help you narrow down the selection based on your requirements.\"}\n",
-      "{'role': 'user', 'content': \"I'm looking for a house. The budget is 5000000.\"}\n",
-      "{'role': 'assistant', 'content': None, 'function_call': {'name': 'filter_lte', 'arguments': '{\\n\"filter_name\": \"price\",\\n\"filter_value\": 5000000\\n}'}}\n",
-      "{'role': 'function', 'name': 'filter_lte', 'content': '350'}\n",
-      "{'role': 'assistant', 'content': 'Great! Based on your budget of 5,000,000 USD, I currently have 350 houses that fall within that price range.'}\n",
-      "{'role': 'user', 'content': 'i need a large room, but one that is prone to flooding'}\n",
-      "{'role': 'assistant', 'content': None, 'function_call': {'name': 'filter_gte', 'arguments': '{\\n\"filter_name\": \"area\",\\n\"filter_value\": 150\\n}'}}\n",
-      "{'role': 'function', 'name': 'filter_gte', 'content': '350'}\n",
-      "{'role': 'assistant', 'content': None, 'function_call': {'name': 'filter_lte', 'arguments': '{\\n\"filter_name\": \"basement\",\\n\"filter_value\": 1\\n}'}}\n",
-      "{'role': 'function', 'name': 'filter_lte', 'content': '350'}\n",
-      "{'role': 'assistant', 'content': 'Based on your requirement for a large room and a property that is prone to flooding, I have narrowed down the list to 350 houses. These houses have a total floor area of at least 150 square meters and have a basement.'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for m in realtor.convo:\n",
-    "    print(m)"
    ]
   },
   {
