fix filter methods

--- a/RealtorBot.ipynb
+++ b/RealtorBot.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install pandas==2.0.3 openai==0.28.1 termcolor==2.3.0 tenacity==8.2.3 tiktoken==0.5.1"
+    "!pip3 install pandas==2.0.3 openai==0.28.1 termcolor==2.3.0 tenacity==8.2.3"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "e11ae6ab-f8bb-4ffe-8bfa-7e94fdbf500e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,6 @@
     "\n",
     "import pandas as pd\n",
     "import openai\n",
-    "import tiktoken\n",
     "\n",
     "from tenacity import retry, stop_after_attempt, wait_random_exponential\n",
     "from termcolor import colored"
@@ -64,24 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d08db273-ba69-41c6-9f98-89b1cb943af6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_housing_data(preprocess=True):\n",
-    "    furn = [\"unfurnished\", \"semi-furnished\", \"furnished\"]\n",
-    "    hd = pd.read_csv(\"housing_data.csv\")\n",
-    "    if preprocess:\n",
-    "        for col_name in [\"mainroad\", \"guestroom\", \"basement\", \"hotwaterheating\", \"airconditioning\", \"prefarea\"]:\n",
-    "            hd[col_name] = hd[col_name].apply(lambda x: 0 if x == \"no\" else 1)\n",
-    "        hd[\"furnishingstatus\"] = hd[\"furnishingstatus\"].apply(lambda x: furn.index(x))\n",
-    "    return hd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "b7dcb43a-84c1-4e6a-9e75-2a019afc90f6",
    "metadata": {},
    "outputs": [
@@ -242,20 +224,20 @@
        "4              no             yes        2       no        furnished  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "housing_data = load_housing_data(False)\n",
+    "housing_data = pd.read_csv(\"housing_data.csv\")\n",
     "print(housing_data.dtypes)\n",
     "housing_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "c620cd6a-4d9f-4d47-a284-290f3e80ef59",
    "metadata": {},
    "outputs": [
@@ -423,13 +405,22 @@
        "4                 2  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "housing_data = load_housing_data(True)\n",
+    "def load_housing_data():\n",
+    "    furn = [\"unfurnished\", \"semi-furnished\", \"furnished\"]\n",
+    "    hd = pd.read_csv(\"housing_data.csv\")\n",
+    "    for col_name in [\"mainroad\", \"guestroom\", \"basement\", \"hotwaterheating\", \"airconditioning\", \"prefarea\"]:\n",
+    "        hd[col_name] = hd[col_name].apply(lambda x: 0 if x == \"no\" else 1)\n",
+    "    hd[\"furnishingstatus\"] = hd[\"furnishingstatus\"].apply(lambda x: furn.index(x))\n",
+    "    return hd\n",
+    "\n",
+    "\n",
+    "housing_data = load_housing_data()\n",
     "print(housing_data.dtypes)\n",
     "housing_data.head()"
    ]
@@ -487,31 +478,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_lte(housing_data: pd.DataFrame,\n",
-    "               filter_name: str,\n",
-    "               filter_value: int):\n",
-    "    housing_data = housing_data[housing_data[filter_name] <= filter_value]\n",
+    "def filter(housing_data:pd.DataFrame,\n",
+    "           condition: pd.core.series.Series):\n",
+    "    housing_data = housing_data[condition]\n",
     "    return housing_data, len(housing_data)\n",
     "\n",
     "\n",
-    "def filter_gte(housing_data: pd.DataFrame,\n",
-    "               filter_name: str,\n",
-    "               filter_value: int):\n",
-    "    housing_data = housing_data[housing_data[filter_name] >= filter_value]\n",
-    "    return housing_data, len(housing_data)\n",
+    "def filter_lte(*args):\n",
+    "    housing_data = args[0]\n",
+    "    condition = housing_data[args[1]] <= args[2]\n",
+    "    return filter(housing_data, condition)\n",
     "\n",
     "\n",
-    "def filter_equal(housing_data: pd.DataFrame,\n",
-    "               filter_name: str,\n",
-    "               filter_value: int):\n",
-    "    housing_data = housing_data[housing_data[filter_name] == filter_value]\n",
+    "def filter_gte(*args):\n",
+    "    housing_data = args[0]\n",
+    "    condition = housing_data[args[1]] >= args[2]\n",
+    "    return filter(housing_data, condition)\n",
+    "\n",
+    "\n",
+    "def filter_equal(*args):\n",
+    "    housing_data = args[0]\n",
+    "    condition = housing_data[args[1]] == args[2]\n",
+    "    return filter(housing_data, condition)\n",
+    "\n",
+    "\n",
+    "def reset(*args):\n",
+    "    housing_data = load_housing_data(preprocess=True)\n",
     "    return housing_data, len(housing_data)\n",
     "\n",
     "\n",
     "FUNCTION_DICT = {\n",
     "    \"filter_lte\": filter_lte,\n",
     "    \"filter_gte\": filter_gte,\n",
-    "    \"filter_equal\": filter_equal\n",
+    "    \"filter_equal\": filter_equal,\n",
+    "    \"reset\": reset\n",
     "}"
    ]
   },
@@ -533,7 +533,7 @@
     "FUNCTION_SPECS = [\n",
     "    {\n",
     "        \"name\": \"filter_lte\",\n",
-    "        \"description\": \"Return the number of houses for which the specified filter is less than or equal to the filter value.\",\n",
+    "        \"description\": \"Remove properties for which the value is more than the filter value. Return the number of remaining properties.\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
@@ -543,7 +543,7 @@
     "                },\n",
     "                \"filter_value\": {\n",
     "                    \"type\": \"integer\",\n",
-    "                    \"description\": \"The value of the characteristic.\",\n",
+    "                    \"description\": \"The maximum allowable value of the characteristic.\",\n",
     "                }\n",
     "            },\n",
     "            \"required\": [\"filter_name\", \"filter_value\"],\n",
@@ -551,7 +551,7 @@
     "    },\n",
     "    {\n",
     "        \"name\": \"filter_gte\",\n",
-    "        \"description\": \"Return the number of houses for which the specified filter is greater than or equal to the filter value.\",\n",
+    "        \"description\": \"Remove properties for which the value is less than the filter value. Return the number of remaining properties.\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
@@ -561,7 +561,7 @@
     "                },\n",
     "                \"filter_value\": {\n",
     "                    \"type\": \"integer\",\n",
-    "                    \"description\": \"The value of the characteristic.\",\n",
+    "                    \"description\": \"The minimum allowable value of the characteristic.\",\n",
     "                }\n",
     "            },\n",
     "            \"required\": [\"filter_name\", \"filter_value\"],\n",
@@ -569,7 +569,7 @@
     "    },\n",
     "    {\n",
     "        \"name\": \"filter_equal\",\n",
-    "        \"description\": \"Return the number of houses which match given value.\",\n",
+    "        \"description\": \"Keep only properties which match the filter value. Return the number of remaining properties.\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
@@ -579,10 +579,18 @@
     "                },\n",
     "                \"filter_value\": {\n",
     "                    \"type\": \"integer\",\n",
-    "                    \"description\": \"The value to match.\",\n",
+    "                    \"description\": \"The exact value to match.\",\n",
     "                }\n",
     "            },\n",
     "            \"required\": [\"filter_name\", \"filter_value\"],\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"reset\",\n",
+    "        \"description\": \"Reset the list of houses to its original state and return the number of properties.\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {}\n",
     "        }\n",
     "    }\n",
     "]"
@@ -598,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "5e475797-765d-4ddc-b21e-547b795f1d58",
    "metadata": {},
    "outputs": [],
@@ -609,7 +617,7 @@
     "        self.model = model\n",
     "        self.function_specs = function_specs\n",
     "        self.functions = functions\n",
-    "        \n",
+    "\n",
     "        self.housing_data = load_housing_data()\n",
     "        self.convo: list = [{\"role\": \"system\", \"content\": system_content.format(len(self.housing_data))}]\n",
     "        self.debug = debug\n",
@@ -694,16 +702,15 @@
     "            print(colored(print_message, colour))\n",
     "\n",
     "    def call_function(self, function_call):\n",
-    "    \n",
+    "\n",
     "        # Extract the function call info\n",
     "        function_name = function_call[\"name\"]\n",
     "        function_to_call = self.functions[function_name]\n",
     "        function_args = json.loads(function_call[\"arguments\"])\n",
+    "        arg_values = [v for _, v in function_args.items()]\n",
     "\n",
     "        self.housing_data, num_properties = function_to_call(\n",
-    "            housing_data=self.housing_data,\n",
-    "            filter_name=function_args.get(\"filter_name\"),\n",
-    "            filter_value=function_args.get(\"filter_value\")\n",
+    "            *[self.housing_data, *arg_values]\n",
     "        )\n",
     "\n",
     "        return {\"role\": \"function\", \"name\": function_name, \"content\": str(num_properties)}"
@@ -711,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "1f5c056e-7dd9-48bd-8fa7-ad4d36a62346",
    "metadata": {},
    "outputs": [
@@ -719,44 +726,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34mHi there! Welcome to our real estate agency. How can I assist you today?\n",
-      "We have a list of 545 properties available. To help you narrow down the selection, could you please let me know your specific requirements?\u001b[0m\n"
+      "\u001b[34mWelcome to the realtor site! How can I assist you today?\u001b[0m\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      ">  I'm looking for a house. The budget is 5000000\n"
+      ">  i'm looking for something in an upcoming neighbourhood.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[30mI'm looking for a house. The budget is 5000000\u001b[0m\n",
-      "\u001b[31m{'name': 'filter_lte', 'arguments': '{\\n  \"filter_name\": \"price\",\\n  \"filter_value\": 5000000\\n}'}\u001b[0m\n",
-      "\u001b[32m{'role': 'function', 'name': 'filter_lte', 'content': '350'}\u001b[0m\n",
-      "\u001b[34mGreat! Based on your budget of 5000000, we have 350 houses available. That's a good number to start with. \n",
-      "What other requirements do you have for the house?\u001b[0m\n"
+      "\u001b[30mi'm looking for something in an upcoming neighbourhood.\u001b[0m\n",
+      "\u001b[34mGreat! I can help you with that. Could you please provide me with some more details? What is your preferred location or city?\u001b[0m\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      ">  we are a two car family\n"
+      ">  i'm looking for something in a hip neighbourhood.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[30mwe are a two car family\u001b[0m\n",
-      "\u001b[31m{'name': 'filter_gte', 'arguments': '{\\n  \"filter_name\": \"parking\",\\n  \"filter_value\": 2\\n}'}\u001b[0m\n",
-      "\u001b[32m{'role': 'function', 'name': 'filter_gte', 'content': '54'}\u001b[0m\n",
-      "\u001b[34mAlright, we have 54 houses that have at least 2 parking spaces. That should be suitable for your two-car family. \n",
-      "Is there anything else you are looking for in a house?\u001b[0m\n"
+      "\u001b[30mi'm looking for something in a hip neighbourhood.\u001b[0m\n",
+      "\u001b[31m{'name': 'filter_equal', 'arguments': '{\\n  \"filter_name\": \"prefarea\",\\n  \"filter_value\": 1\\n}'}\u001b[0m\n",
+      "\u001b[32m{'role': 'function', 'name': 'filter_equal', 'content': '128'}\u001b[0m\n",
+      "\u001b[34mI have narrowed down the list to 128 properties located in trendy neighbourhoods. How else can I assist you in finding your ideal property?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      ">  i need both aircon and 24/7 hot showers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[30mi need both aircon and 24/7 hot showers.\u001b[0m\n",
+      "\u001b[31m{'name': 'filter_equal', 'arguments': '{\\n  \"filter_name\": \"airconditioning\",\\n  \"filter_value\": 1\\n}'}\u001b[0m\n",
+      "\u001b[32m{'role': 'function', 'name': 'filter_equal', 'content': '53'}\u001b[0m\n",
+      "\u001b[31m{'name': 'filter_equal', 'arguments': '{\\n  \"filter_name\": \"hotwaterheating\",\\n  \"filter_value\": 1\\n}'}\u001b[0m\n",
+      "\u001b[32m{'role': 'function', 'name': 'filter_equal', 'content': '1'}\u001b[0m\n",
+      "\u001b[34mI have filtered the list based on your requirements for both air conditioning and 24/7 hot showers. There are currently 1 property that meets these criteria. How else can I assist you?\u001b[0m\n"
      ]
     },
     {
@@ -771,7 +792,6 @@
     "REALTOR_SYSTEM_CONTENT = \\\n",
     "\"\"\"\n",
     "You are a helpful realtor with a list initially containing {} properties.\n",
-    "Greet the customer and offer to help narrow this selection based on the customer's requirements.\n",
     "For each property, we have the following characteristics:\n",
     "    price (asking price in euro),\n",
     "    area (total floor area in metres squared),\n",
@@ -786,41 +806,14 @@
     "    parking (number of parking spaces),\n",
     "    prefarea (1 if the property is in a trendy neighbourhood, otherwise 0),\n",
     "    furnishingstatus (0 if unfurnished, 1 if semi-furnished, 2 if fully furnished)\n",
-    "Help the user to narrow the list.\n",
-    "When there are fewer than 10, advise the user to call the office to arrange viewings.\n",
+    "Welcome the customer to the realtor site and offer to help narrow this selection based on their requirements.\n",
+    "If the customer changes their mind about a feature, reset the list and reapply previous filters alongside the corrected requirement.\n",
     "\"\"\"\n",
     "\n",
     "# I'm looking for a house. The budget is 5000000; we are a two car family; we need somewhere without stairs.\n",
     "\n",
     "realtor = Realtor(REALTOR_SYSTEM_CONTENT, FUNCTION_SPECS, FUNCTION_DICT, debug=True)\n",
     "realtor.converse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e39732c1-62e3-40b1-afff-e52cf72ff719",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15\n"
-     ]
-    }
-   ],
-   "source": [
-    "def count_tokens(sentence):\n",
-    "    encoding = tiktoken.encoding_for_model(\"gpt-3.5-turbo\")\n",
-    "    tokens = encoding.encode(sentence)\n",
-    "    token_count = len(tokens)\n",
-    "    return token_count\n",
-    "\n",
-    "\n",
-    "sentence = \"I'm looking for a house. The budget is 5000000.\"\n",
-    "c = count_tokens(sentence)\n",
-    "print(c)"
    ]
   }
  ],
